euler/parser/tokenizer.c
/* Generated by re2c 1.0.1 on Sun Aug 11 23:06:32 2019 */
#line 1 "euler/parser/tokenizer.re"
#include "grammar.h"
#include "tokenizer.h"

#define FILL_LEX(q) YYCURSOR = q

char *YYCURSOR;

static int lex(void)
{
	char *YYMARKER, *o1;

	// Settings
	
	
#line 18 "euler/parser/tokenizer.c"
{
	char yych;
	unsigned int yyaccept = 0;
	yych = *YYCURSOR;
	switch (yych) {
	case 0x00:	goto yy2;
	case '(':	goto yy6;
	case ')':	goto yy8;
	case '*':	goto yy10;
	case '+':	goto yy12;
	case '-':	goto yy14;
	case '/':	goto yy16;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy18;
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy21;
	default:	goto yy4;
	}
yy2:
	++YYCURSOR;
	o1 = YYCURSOR;
#line 43 "euler/parser/tokenizer.re"
	{ return symbol_table_append(EOL, o1); }
#line 74 "euler/parser/tokenizer.c"
yy4:
	++YYCURSOR;
#line 44 "euler/parser/tokenizer.re"
	{ return UNKNOWN; }
#line 79 "euler/parser/tokenizer.c"
yy6:
	++YYCURSOR;
	o1 = YYCURSOR;
#line 38 "euler/parser/tokenizer.re"
	{ return symbol_table_append(LPAREN, o1); }
#line 85 "euler/parser/tokenizer.c"
yy8:
	++YYCURSOR;
	o1 = YYCURSOR;
#line 39 "euler/parser/tokenizer.re"
	{ return symbol_table_append(RPAREN, o1);}
#line 91 "euler/parser/tokenizer.c"
yy10:
	++YYCURSOR;
	o1 = YYCURSOR;
#line 36 "euler/parser/tokenizer.re"
	{ return symbol_table_append(MULT, o1); }
#line 97 "euler/parser/tokenizer.c"
yy12:
	++YYCURSOR;
	o1 = YYCURSOR;
#line 34 "euler/parser/tokenizer.re"
	{ return symbol_table_append(PLUS, o1); }
#line 103 "euler/parser/tokenizer.c"
yy14:
	++YYCURSOR;
	o1 = YYCURSOR;
#line 35 "euler/parser/tokenizer.re"
	{ return symbol_table_append(MINUS, o1);  }
#line 109 "euler/parser/tokenizer.c"
yy16:
	++YYCURSOR;
	o1 = YYCURSOR;
#line 37 "euler/parser/tokenizer.re"
	{ return symbol_table_append(DIV, o1); }
#line 115 "euler/parser/tokenizer.c"
yy18:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '.':	goto yy23;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy18;
	default:	goto yy20;
	}
yy20:
	o1 = YYCURSOR;
#line 28 "euler/parser/tokenizer.re"
	{ return symbol_table_append(INT, o1); }
#line 137 "euler/parser/tokenizer.c"
yy21:
	++YYCURSOR;
	o1 = YYCURSOR;
#line 30 "euler/parser/tokenizer.re"
	{ return symbol_table_append(LETTER, o1); }
#line 143 "euler/parser/tokenizer.c"
yy23:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy25;
	default:	goto yy24;
	}
yy24:
	YYCURSOR = YYMARKER;
	if (yyaccept == 0) {
		goto yy20;
	} else {
		goto yy27;
	}
yy25:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy25;
	case 'E':
	case 'e':	goto yy28;
	default:	goto yy27;
	}
yy27:
	o1 = YYCURSOR;
#line 29 "euler/parser/tokenizer.re"
	{ return symbol_table_append(FLOAT, o1); }
#line 188 "euler/parser/tokenizer.c"
yy28:
	yych = *++YYCURSOR;
	switch (yych) {
	case '+':
	case '-':	goto yy29;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy30;
	default:	goto yy24;
	}
yy29:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy30;
	default:	goto yy24;
	}
yy30:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy30;
	default:	goto yy27;
	}
}
#line 46 "euler/parser/tokenizer.re"

}

static void clear_ersl(ersl_t *ersl)
{
	/* reset euler result */
	ersl->status = 0;
	ersl->type = 0;
	ersl->resultn.fraction = 0;
}

void parser_restart(void *parser)
{
	parse_free(parser, free);
	parser = parse_alloc(malloc);
}

void parse_query(char *query, ersl_t *ersl)
{
	void *parser = parse_alloc(malloc);
	char *addr = query;

	clear_ersl(ersl);
	symbol_table_clear();

	FILL_LEX(query);

	symbol_table_init(query);

	printf("token \t| addr \t\t| string \t| float\n");
	printf("rsv \t| %p \t| NULL \t\t|NaN\n", query);
	while (lex() != EOL) {
	}
	parse(parser, 0, 0, ersl);
end:
	parse_free(parser, free);
}
